// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots QuestionChoice Default 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "rgba(0, 0, 0, 0.1)",
          "borderRadius": 3,
          "borderStyle": "solid",
          "borderWidth": 1,
          "overflow": "hidden",
        },
        false,
        Object {
          "flexGrow": 1,
        },
      ]
    }
    testID="question-choice-1"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#14171A",
            "fontSize": 17,
            "fontWeight": "700",
            "justifyContent": "flex-start",
            "paddingHorizontal": 24,
            "paddingVertical": 16,
          },
          false,
        ]
      }
    >
      Option 1
    </Text>
  </View>
</View>
`;

exports[`Storyshots QuestionChoice Selected 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "rgba(0, 0, 0, 0.1)",
          "borderRadius": 3,
          "borderStyle": "solid",
          "borderWidth": 1,
          "overflow": "hidden",
        },
        Object {
          "backgroundColor": "#00B0FF",
          "borderColor": "#00B0FF",
        },
        Object {
          "flexGrow": 1,
        },
      ]
    }
    testID="question-choice-2-selected"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#14171A",
            "fontSize": 17,
            "fontWeight": "700",
            "justifyContent": "flex-start",
            "paddingHorizontal": 24,
            "paddingVertical": 16,
          },
          Object {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      Option 2
    </Text>
  </View>
</View>
`;

exports[`Storyshots QuestionChoice Selected with image 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "rgba(0, 0, 0, 0.1)",
          "borderRadius": 3,
          "borderStyle": "solid",
          "borderWidth": 1,
          "overflow": "hidden",
        },
        Object {
          "backgroundColor": "#00B0FF",
          "borderColor": "#00B0FF",
        },
        Object {
          "flexGrow": 1,
        },
      ]
    }
    testID="question-choice-4-selected"
  >
    <View
      style={
        Object {
          "borderTopLeftRadius": 3,
          "borderTopRightRadius": 3,
          "height": 120,
          "width": "100%",
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/__fixtures__/image-landscape-1.jpg",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": 120,
              "width": "100%",
            },
            undefined,
          ]
        }
        testID="question-choice-4-image"
      />
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#14171A",
            "fontSize": 17,
            "fontWeight": "700",
            "justifyContent": "flex-start",
            "paddingHorizontal": 24,
            "paddingVertical": 16,
          },
          Object {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      Option 4
    </Text>
  </View>
</View>
`;

exports[`Storyshots QuestionChoice With image 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "rgba(0, 0, 0, 0.1)",
          "borderRadius": 3,
          "borderStyle": "solid",
          "borderWidth": 1,
          "overflow": "hidden",
        },
        false,
        Object {
          "flexGrow": 1,
        },
      ]
    }
    testID="question-choice-3"
  >
    <View
      style={
        Object {
          "borderTopLeftRadius": 3,
          "borderTopRightRadius": 3,
          "height": 120,
          "width": "100%",
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/__fixtures__/image-landscape-1.jpg",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": 120,
              "width": "100%",
            },
            undefined,
          ]
        }
        testID="question-choice-3-image"
      />
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#14171A",
            "fontSize": 17,
            "fontWeight": "700",
            "justifyContent": "flex-start",
            "paddingHorizontal": 24,
            "paddingVertical": 16,
          },
          false,
        ]
      }
    >
      Option 3
    </Text>
  </View>
</View>
`;
